# ray-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/engine/: camera.hpp  engine.hpp  materials.hpp  primitive.hpp  ray.hpp  renderer.hpp  scene.hpp  shapes.hpp
include/engine/backend/: backend.h  backend.hpp  cpu.hpp  vulkan.hpp
include/engine/backend/vk/: context.hpp
include/engine/base/: material.hpp  shape.hpp
include/engine/core/: base.hpp  deletion_queue.hpp  random.hpp  std.hpp  timer.hpp
src/cli/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  camera.cpp  engine.cpp  materials.cpp  primitive.cpp  ray.cpp  renderer.cpp  scene.cpp  shape.cpp  shapes.cpp
src/engine/backend/: cpu.cpp  vulkan.cpp
src/engine/backend/vk/: context.cpp
src/engine/core/: random.cpp  timer.cpp
src/engine/media/: media.cpp
src/viewer/: CMakeLists.txt  main.cpp
src/viewer/core/: application.cpp  application.hpp  base.hpp  panel.cpp  panel.hpp  settings_panel.cpp  viewport_panel.cpp  viewport_panel.hpp
src/viewer/gfx/: context.cpp  context.hpp  debug_alloc.cpp  external.hpp  image.cpp  image.hpp  ui_layer.cpp  ui_layer.hpp
src/viewer/panels/: scene_panel.cpp  scene_panel.hpp  settings_panel.cpp  settings_panel.hpp  viewport_panel.cpp  viewport_panel.hpp
src/viewer/platform/: window.cpp  window.hpp
